Added some conf informations

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,18 +5,18 @@ author = Gaston TJEBBES
 author_email = g.t@majerti.fr
 keywords = pyramid, scaffold, majerti, web
 home_page = https://github.com/tonthon/pyramid_noun
-project_url = 
+project_url =
     Source repository, https://github.com/tonthon/pyramid_noun
-requires_dist = 
+requires_dist =
     pyramid
 requires_python = >=2.7
-description_file = README.rst                                                   
+description_file = README.rst
 summary = Majerti's pyramid scaffold
 license = GPLv3
-classifier = 
-    Development Status :: 3 - Alpha 
+classifier =
+    Development Status :: 3 - Alpha
     License :: OSI Approved :: GNU General Public License (GPL)
-    Intended Audience :: Developers 
+    Intended Audience :: Developers
     Framework :: Pyramid
     Programming Language :: Python
     Topic :: Internet :: WWW/HTTP :: WSGI
@@ -25,6 +25,14 @@ classifier =
 include_package_data = True
 zip_safe = False
 packages = pyramid_noun
+packages =
+    pyramid_noun
+    pyramid_noun.scaffolds
+extra_files =
+    setup.cfg
+    setup.py
+    README.rst
+
 
 [specific]
 entry_points=[pyramid.scaffold]
